# ArggLib

./: .gitignore  CMakeLists.txt
Include/ArggLib/: ArggLib_Unit_Tests.hh  Drop.hh  Evaluate.hh  Export_CSV.hh  Fill.hh  FunctionArgs.hh  Import_CSV.hh  Import_CSV.hh.orig  Lagacy.hh  Modify.hh  OnEnd.hh  OnStart.hh  PRECOMPILER_HELPER.hh  Where.hh  add.hh  add_parameter.hh  async_proc.hh  cautor.hh  complete_lib.hh  constexpr_if.hh  contains.hh  contains_f.hh  convert2HashTable.hh  core_cling.hh  cpp11artefacts.hh  factory.hh  factoryDef.hh  for_loop.hh  func.hh  has_member_helper.hh  impl_do_begin_do_end.hh  l_array.hh  loop_helpers.hh  named_variable.hh  object_modifier.hh  onEnd2.hh  out_stream.hh  out_stream.hh.orig  param.hh  param_cint.hh  (+20 more)
Include/ArggLib/ArggLib_impl/: custom_processor_helper.hh  import_CSV_impl.hh  vector_helpers_impl.hh
Include/ArggLib/deprecated/: apply.hh  old_processor_definitions.hh
Include/ArggLib/reactive_programming/: reactive_backend.hh  reactive_backend_async.hh  reactive_backend_base.hh  reactive_entity_base.hh  reactive_obj_base.hh  reactive_ports.hh  reactive_processor.hh  reactive_signals.hh  reactive_variable.hh
Include/ArggLib/root/: Draw_root_objects.hh  Fill_root_objects.hh  RQSignals.hh  TGSignals.hh
Include/ArggLib/stringHash/: compileTimeHash.hh
Tests/: CMakeLists.txt
Tests/include/: reactive_test1.hh
Tests/src/: PipeLines.cpp  PipeLines2.cpp  PipeLines3.cpp  factory.cpp  functional_programming.cpp  graphs.cc  main.cpp  processors01.cpp  processors2.cpp  reactive_programming.cpp  reactive_programming2.cpp
Tests_ROOT/: CMakeLists.txt
Tests_ROOT/inc/: signal_slot_test.hh  signal_slot_test.hpp  signal_slot_test_LinkDef.hh
Tests_ROOT/src/: Root_Processor_tests.cc  Signal_slot_tests.cc  main.cpp
cmake/: FindROOT.cmake
lagacy_code/: test11.cc
